--- a/THREEJS/primitives2/home.html
+++ b/THREEJS/primitives2/home.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css.css" rel="stylesheet" />
     <title>Les pirmitives</title>
 </head>
 
 <body>
     <main>
+        <h1>Malick Baguiri</h1>
         <canvas id="c"></canvas>
     </main>
     <script type="module" src="primi.js"></script>
